# starry

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_STRUCTURE.md  README.md  build.py  starry.g4
compiler/: build.gradle.kts  settings.gradle.kts
compiler/gradle/wrapper/: gradle-wrapper.properties
compiler/src/main/kotlin/starry/compiler/: CompilePass.kt  Compiler.kt  CompilerLog.kt  Main.kt
crates/starry/: Cargo.toml
crates/starry-ast/: Cargo.toml
crates/starry-ast/src/: ast.rs  lib.rs  span.rs  token.rs
crates/starry-lex/: Cargo.toml
crates/starry-lex/examples/: demo.rs  demo_lex.rs
crates/starry-lex/src/: dfa.rs  lexer.rs  lib.rs  minimize.rs  nfa.rs  regex.rs  subset.rs  thompson.rs
crates/starry-lex/src/grammar/: ast.rs  builder.rs  converter.rs  display.rs  mod.rs  parser.rs
crates/starry-parser/: Cargo.toml
crates/starry-parser/examples/: demo_parser.rs  demo_parser_lr.rs
crates/starry-parser/src/: ast_builder.rs  cfg.rs  lib.rs  ll1_parser.rs  parser.rs  token_mapper.rs
crates/starry-parser/src/analysis/: first.rs  follow.rs  left_recursion.rs  left_recursion_elimination.rs  mod.rs  parsing_table.rs
crates/starry-parser/src/ll1/: builder.rs  error.rs  mod.rs  parser.rs  parsing_table.rs  recursive.rs  stack.rs  token_mapper.rs  tree_builder.rs
crates/starry-parser/src/lr/: action.rs  all_items.rs  augmented.rs  builder.rs  closure.rs  conflict.rs  core_set.rs  error.rs  first.rs  follow.rs  goto.rs  grammar_type.rs  item.rs  item_set.rs  lookahead.rs  mod.rs  parser.rs  stack.rs  states.rs  table.rs  token_mapper.rs  validator.rs
crates/starryc/: Cargo.toml
docs/: Development.md  README.md
docs/dev/: Development.md
examples/: CMakeLists.txt  hello.star  lexer_test.cpp
include/starry/: AST.h  ASTVisitor.h  Lexer.h  Parser.h
include/starry/codegen/: LLVMEmitter.h
include/starry/runtime/: Thread.h
include/starry/semantic/: TypeChecker.h
include/starry/stdlib/: Collection.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/compiler/: CMakeLists.txt
src/compiler/ast/: ASTNode.cpp  ASTVisitor.cpp  CMakeLists.txt  Declaration.cpp  Expression.cpp  Statement.cpp  Type.cpp  Visitor.cpp
src/compiler/codegen/: CMakeLists.txt  CodeGenerator.cpp  IRBuilder.cpp  LLVMEmitter.cpp  Optimizer.cpp
src/compiler/lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp
src/compiler/parser/: CMakeLists.txt  Parser.cpp
src/compiler/semantic/: CMakeLists.txt  Error.cpp  Scope.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp  TypeChecker.cpp
src/runtime/: CMakeLists.txt  Exception.cpp  GC.cpp  IO.cpp  Memory.cpp  Thread.cpp  runtime.cpp
src/stdlib/: CMakeLists.txt  Collection.cpp  IO.cpp  Math.cpp  Network.cpp  String.cpp  System.cpp
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  CompilerIntegrationTest.cpp  RuntimeIntegrationTest.cpp  StdlibIntegrationTest.cpp
test/performance/: CMakeLists.txt  CodeGenBenchmark.cpp  CollectionBenchmark.cpp  GCBenchmark.cpp  LexerBenchmark.cpp  MemoryBenchmark.cpp  ParserBenchmark.cpp  StringBenchmark.cpp
test/unit/: ASTTest.cpp  CMakeLists.txt  CodeGenTest.cpp  CollectionTest.cpp  ExceptionTest.cpp  LexerTest.cpp  MathTest.cpp  MemoryTest.cpp  ParserTest.cpp  SemanticTest.cpp  StringTest.cpp  SymbolTableTest.cpp  ThreadTest.cpp  TypeCheckerTest.cpp
